@@ -1,4 +1,4 @@
-/* $Id: kmine.c,v 1.4 2004-12-21 11:58:14 btb Exp $ */
+/* $Id: kmine.c,v 1.5 2005-01-23 14:46:49 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -19,7 +19,7 @@ COPYRIGHT 1993-1998 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
  */
 
 #ifdef RCS
-static char rcsid[] = "$Id: kmine.c,v 1.4 2004-12-21 11:58:14 btb Exp $";
+static char rcsid[] = "$Id: kmine.c,v 1.5 2005-01-23 14:46:49 schaffner Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -33,6 +33,8 @@ static char rcsid[] = "$Id: kmine.c,v 1.4 2004-12-21 11:58:14 btb Exp $";
 #include "error.h"
 #include "strutil.h"
 
+#include "nocfile.h"
+
 #include "inferno.h"
 #include "editor.h"
 #include "ui.h"
@@ -43,8 +45,6 @@ static char rcsid[] = "$Id: kmine.c,v 1.4 2004-12-21 11:58:14 btb Exp $";
 #include "info.h"
 #include "game.h"
 #include "gameseq.h"
-
-#include "nocfile.h"
 
 #include "object.h"
 
