@@ -1,4 +1,4 @@
-/* $Id: mine.c,v 1.5 2004-12-24 05:17:09 btb Exp $ */
+/* $Id: mine.c,v 1.6 2005-01-23 14:46:49 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -19,7 +19,7 @@ COPYRIGHT 1993-1998 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
  */
 
 #ifdef RCS
-static char rcsid[] = "$Id: mine.c,v 1.5 2004-12-24 05:17:09 btb Exp $";
+static char rcsid[] = "$Id: mine.c,v 1.6 2005-01-23 14:46:49 schaffner Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -31,6 +31,7 @@ static char rcsid[] = "$Id: mine.c,v 1.5 2004-12-24 05:17:09 btb Exp $";
 #include <math.h>
 #include <string.h>
 
+#include "nocfile.h"
 #include "mono.h"
 #include "key.h"
 #include "gr.h"
@@ -53,7 +54,6 @@ static char rcsid[] = "$Id: mine.c,v 1.5 2004-12-24 05:17:09 btb Exp $";
 #include "medwall.h"
 #include "switch.h"
 
-#include "nocfile.h"
 #include "fuelcen.h"
 
 #define REMOVE_EXT(s)  (*(strchr( (s), '.' ))='\0')
